public/css/custom.css
html, body {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    display: table;
    font-weight: 100;
    font-family: 'Lobster', cursive;
    font-size: 25px;
}

a {
    color: inherit;
    text-decoration: inherit;
}

a:hover {
    color: inherit;
    text-decoration: inherit;
}

a:visited {
    color: inherit;
    text-decoration: inherit;
}

/* ------------------------- */
/* -- Welcome Page Styles -- */
/* ------------------------- */

.welcome-container {
    text-align: center;
    display: table-cell;
    vertical-align: middle;
}

.welcome-content {
    text-align: center;
    display: inline-block;
}

.welcome-title {
    font-size: 160px;
    color: #245B89;
}

.welcome-subtitle {
    font-family: 'Open Sans', sans-serif;
    font-weight: 500;
}

/* ------------------- */
/* -- Banner Styles -- */
/* ------------------- */

.top-banner {
    text-align: center;
    display: table-cell;
    background-color: #245B89;
    position: fixed;
}

.banner-spacer {
    display: table-cell;
    color:white;
}

.banner-title {
    font-size: 30px;
    color: white;
    width: 100vw;
}

/* ------------------- */
/* -- IFrame Styles -- */
/* ------------------- */

.scroll-wrapper {
    -webkit-overflow-scrolling: touch;
    overflow-y: scroll;
}

